--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "eugenia",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^9.4.1"
+    "cypress": "^9.4.1",
+    "cypress-xpath": "^1.6.2"
   }
 }
